--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogha Raj Dhayal Portfolio</title>
-    <link rel="stylesheet" href="./style.css" </head>
+    <link rel="stylesheet" href="./assets/CSS/style.css"></head>
 
 <body>
     <header>
