--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogha Raj Dhayal Portfolio</title>
-    <link rel="stylesheet" href="./assets/CSS/style.css"></head>
+    <link rel="stylesheet" href="./assets/CSS/style.css">
+</head>
 
 <body>
     <header>
         <div>
-            <a href="./index.html"><span class="logo">YOGHA RAJ DHAYAL</span></a>
+            <a href="./index.html" target="_blank"><span class="logo">YOGHA RAJ DHAYAL</span></a>
         </div>
         <div>
             <ul>
                 <li>
-                    <a href="./index.html">Home</a>
+                    <a href="./index.html" target="_blank">Home</a>
                 </li>
                 <li>
-                    <a href="./about.html">About</a>
+                    <a href="./about.html" target="_blank">About</a>
                 </li>
                 <li>
-                    <a href="./contact.html">Contact</a>
+                    <a href="./contact.html" target="_blank">Contact</a>
                 </li>
             </ul>
         </div>
@@ -29,6 +30,28 @@
             <button>Download CV</button>
         </div>
     </header>
+    <main>
+        <section class="hero-section">
+            <div>
+                <h4>Hi there</h4>
+                <h2 class="hero-section__title">I'm Yogha Raj Dhayal</h2>
+                <p class="hero-section__desc">Aspiring intern looking for an opportunity to work</p>
+                <div>
+                    <!-- icon -->
+                </div>
+                <div>
+                    <button>Hire ME
+                    </button>
+                    <button>
+                        Download CV
+                    </button>
+                </div>
+            </div>
+            <div>
+                <img src="https://avatars.githubusercontent.com/u/136661914?v=4" width="250px" />
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
