--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogha Raj Dhayal Portfolio</title>
-    <link rel="stylesheet" href="./assets/CSS/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -40,15 +40,29 @@
                     <!-- icon -->
                 </div>
                 <div>
-                    <button>Hire ME
+                    <button class="light">Hire ME
                     </button>
-                    <button>
+                    <button class="dark">
                         Download CV
                     </button>
                 </div>
             </div>
             <div>
-                <img src="https://avatars.githubusercontent.com/u/136661914?v=4" width="250px" />
+                <img src="./assets/img/yogha raj dhayal photo.jpeg" alt="yogha raj dhayal bout me" width="400px" />
+            </div>
+        </section>
+        <!-- about me -->
+        <section class="about-section">
+            <img src="https://avatars.githubusercontent.com/u/136661914?v=4" width="250px">
+            <div class="about-section-desc">
+                <h4> I am a Product Designer & Web Developer</h4>
+                <ul>
+                    <li><strong>Experience:</strong> 8 years</li>
+                    <li><strong>Speciality:</strong> Cybersecurity</li>
+                    <li><strong>Address:</strong> India</li>
+                    <li><strong>Phone:</strong> hshss</li>
+                    <li><strong>Email:</strong> 12345</li>
+                </ul>
             </div>
         </section>
     </main>
