--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogha Raj Dhayal Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -19,7 +22,7 @@
                     <a href="./index.html" target="_blank">Home</a>
                 </li>
                 <li>
-                    <a href="./about.html" target="_blank">About</a>
+                    <a href="./about-section">About</a>
                 </li>
                 <li>
                     <a href="./contact.html" target="_blank">Contact</a>
@@ -32,40 +35,107 @@
     </header>
     <main>
         <section class="hero-section">
-            <div>
-                <h4>Hi there</h4>
-                <h2 class="hero-section__title">I'm Yogha Raj Dhayal</h2>
-                <p class="hero-section__desc">Aspiring intern looking for an opportunity to work</p>
-                <div>
-                    <!-- icon -->
+            <div class="hero-section-left">
+                <div class="hero-section-content">
+                    <h4>Hi there</h4>
+                    <h2 class="hero-section__title">I'm Yogha Raj <span>Dhayal</span></h2>
+                    <p class="hero-section__desc">Aspiring Web Developer looking for an opportunity to work</p>
                 </div>
-                <div>
-                    <button class="light">Hire ME
-                    </button>
-                    <button class="dark">
-                        Download CV
-                    </button>
+                <div class="hero-section-icons">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+                <div class="hero-section-buttons">
+                    <button class="light">Hire ME</button>
+                    <button class="dark">Download CV</button>
                 </div>
             </div>
             <div>
-                <img src="./assets/img/yogha raj dhayal photo.jpeg" alt="yogha raj dhayal bout me" width="400px" />
+                <img src="./assets/images/yogha raj dhayal.jpg" alt="yogha raj dhayal about me" />
             </div>
+            </div>
+
         </section>
         <!-- about me -->
         <section class="about-section">
-            <img src="https://avatars.githubusercontent.com/u/136661914?v=4" width="250px">
+            <img src="./assets/images/yogha raj dhayal.jpeg">
             <div class="about-section-desc">
-                <h4> I am a Product Designer & Web Developer</h4>
+                <h4> I am a Product <span>Designer</span><br> & Web Developer</h4>
                 <ul>
-                    <li><strong>Experience:</strong> 8 years</li>
-                    <li><strong>Speciality:</strong> Cybersecurity</li>
+                    <li><strong>Experience:</strong> Fresher</li>
+                    <li><strong>Speciality:</strong> Web Development</li>
                     <li><strong>Address:</strong> India</li>
-                    <li><strong>Phone:</strong> hshss</li>
-                    <li><strong>Email:</strong> 12345</li>
+                    <li><strong>Phone:</strong><a href="tel:7010298717"> 7010298717</a></li>
+                    <li><strong>Email:</strong> <a href="mailto:yogharajdhayalnamburajan@gmail.com">
+                            yogharajdhayalnamburajan@gmail.com</a>
+                    </li>
                 </ul>
+                <button class="light">Know More</button>
             </div>
         </section>
+        <!-- work-section -->
+        <section class="work-section">
+            <h4 class="work-section-title">My <span>Works</span></h4>
+            <div class="work-section-items">
+                <div class="work-section-box">
+                    <span class="work-section-iconbox">
+                        <i class="fa-solid fa-display"></i>
+                    </span>
+                    <div class="work-section-desc-box">
+                        <h4>UI/UX Design</h4>
+                        <p>Worked on Simple project designs.</p>
+                    </div>
+                    <a href="#">See My work</a>
+                </div>
+                <div class="work-section-box">
+                    <span class="work-section-iconbox">
+                        <i class="fa-solid fa-display"></i>
+                    </span>
+                    <div class="work-section-desc-box">
+                        <h4>Frontend Development</h4>
+                        <p>Developed some websites UI</p>
+                    </div>
+                    <a href="#">See My work</a>
+                </div>
+                <div class="work-section-box">
+                    <span class="work-section-iconbox">
+                        <i class="fa-solid fa-display"></i>
+                    </span>
+                    <div class="work-section-desc-box">
+                        <h4>Backend Development</h4>
+                        <p>Worked with php,nodejs,python</p>
+                    </div>
+                    <a href="#">See My work</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- contact-section -->
+        <section class="contact-section">
+            <h4>Contact <span>Me</span></h4>
+            <form>
+                <div>
+                    <input type="text" name="name" placeholder="Fullname">
+                </div>
+                <div>
+                    <input type="text" name="message" placeholder="What's the matter">
+                </div>
+                <div>
+                    <textarea name="Description" rows="5" placeholder="Enter briefly..."> </textarea>
+
+                </div>
+                <div>
+                    <button class="light">Send a Message</button>
+                </div>
+
+            </form>
+        </section>
     </main>
+    <footer>
+        <h4>Copyright &copy; 2023 - <a href="https://github.com/yrd369">Yogha Raj Dhayal</a> - All Rights Reserved.</h4>
+    </footer>
 </body>
 
 </html>
