--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="./about-section">About</a>
                 </li>
                 <li>
-                    <a href="./contact.html" target="_blank">Contact</a>
+                    <a href="./index.html/contact-section">Contact</a>
                 </li>
             </ul>
         </div>
@@ -64,13 +64,13 @@
             <div class="about-section-desc">
                 <h4> I am a Product <span>Designer</span><br> & Web Developer</h4>
                 <ul>
-                    <li><strong>Experience:</strong> Fresher</li>
-                    <li><strong>Speciality:</strong> Web Development</li>
-                    <li><strong>Address:</strong> India</li>
-                    <li><strong>Phone:</strong><a href="tel:7010298717"> 7010298717</a></li>
-                    <li><strong>Email:</strong> <a href="mailto:yogharajdhayalnamburajan@gmail.com">
+                    <div><li><strong>Experience:</strong> Fresher</li></div>
+                    <div><li><strong>Speciality:</strong> Web Development</li></div>
+                    <div><li><strong>Address:</strong> India</li></div>
+                    <div><li><strong>Phone:</strong><a href="tel:7010298717"> 7010298717</a></li></div>
+                    <div><li><strong>Email:</strong> <a href="mailto:yogharajdhayalnamburajan@gmail.com">
                             yogharajdhayalnamburajan@gmail.com</a>
-                    </li>
+                    </li></div>
                 </ul>
                 <button class="light">Know More</button>
             </div>
@@ -95,7 +95,7 @@
                     </span>
                     <div class="work-section-desc-box">
                         <h4>Frontend Development</h4>
-                        <p>Developed some websites UI</p>
+                        <p>Developed some website UI  </p>
                     </div>
                     <a href="#">See My work</a>
                 </div>
@@ -105,7 +105,7 @@
                     </span>
                     <div class="work-section-desc-box">
                         <h4>Backend Development</h4>
-                        <p>Worked with php,nodejs,python</p>
+                        <p>Worked with php,nodejs,python  </p>
                     </div>
                     <a href="#">See My work</a>
                 </div>
@@ -134,7 +134,7 @@
         </section>
     </main>
     <footer>
-        <h4>Copyright &copy; 2023 - <a href="https://github.com/yrd369">Yogha Raj Dhayal</a> - All Rights Reserved.</h4>
+        <p>Copyright &copy; 2023 - <a href="https://github.com/yrd369">Yogha Raj Dhayal</a> - All Rights Reserved.</p>
     </footer>
 </body>
 
