Adding README file

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                     <p class="hero-section__desc">Aspiring Web Developer looking for an opportunity to work</p>
                 </div>
                 <div class="hero-section-icons">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/yogha-raj-dhayal/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
                 <div class="hero-section-buttons">
                     <button class="light">Hire ME</button>
@@ -60,7 +60,7 @@
         </section>
         <!-- about me -->
         <section class="about-section">
-            <img src="./assets/images/yogha raj dhayal.jpeg">
+            <img src="./assets/images/Yogha Raj Dhayal img.jpeg">
             <div class="about-section-desc">
                 <h4> I am a Product <span>Designer</span><br> & Web Developer</h4>
                 <ul>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="work-section-box">
                     <span class="work-section-iconbox">
-                        <i class="fa-solid fa-display"></i>
+                        <i class="fa-solid fa-code"></i>
                     </span>
                     <div class="work-section-desc-box">
                         <h4>Backend Development</h4>
@@ -123,7 +123,7 @@
                     <input type="text" name="message" placeholder="What's the matter">
                 </div>
                 <div>
-                    <textarea name="Description" rows="5" placeholder="Enter briefly..."> </textarea>
+                    <textarea name="Description" rows="5" placeholder="Enter briefly..."></textarea>
 
                 </div>
                 <div>
